--- a/index.html
+++ b/index.html
@@ -62,14 +62,17 @@
                         <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                         <li class="hidden"><a href="#page-top"></a></li>
                         <li><a class="page-scroll" href="#section-intro">About</a></li>
-                        <li><a class="page-scroll" href="#section-keynote">Keynote</a></li>
-                        <li><a class="page-scroll" href="#section-location">Location</a></li>
-                        <li><a id="navbarPrecon" class="page-scroll" href="#section-precon">Preconference</a></li>
+                        <!-- <li><a class="page-scroll" href="#section-keynote">Keynote</a></li> -->
+                        <!-- <li><a class="page-scroll" href="#section-location">Location</a></li> -->
+                        <!-- <li><a id="navbarPrecon" class="page-scroll" href="#section-precon">
+                        Preconference</a></li> -->
+                        <li><a id="navbarPrecon" class="page-scroll" href="#section-resources">
+                        RESOURCES</a></li>
                         <li><a class="page-scroll" href="#section-speaker">Committee</a></li>
                         <li><a class="page-scroll" href="#section-ajenda">Content</a></li>
                         <!-- <li><a id="navbarSubmission" class="page-scroll" href="#section-guidelines">Guidelines</a></li> -->
                         <li><a id="navbarRegister" class="page-scroll hidden-xs hidden-sm hidden-md hidden-lg" href="#section-pricing">Registration</a></li>
-                        <li><a class="page-scroll" href="#section-accommodation">Accommodation</a></li>
+                        <!-- <li><a class="page-scroll" href="#section-accommodation">Accommodation</a></li> -->
                         <li><a class="page-scroll" href="#organiziners">Organizers</a></li>
                         <li><a class="page-scroll" href="#section-venue">Contact</a></li>
                     </ul>
@@ -89,8 +92,10 @@
             <font size="50"><b>International Research Conference on<br><br>Smart Computing and Systems Engineering</b></font>
             <p class="lead"><br>Department of Industrial Management | Faculty of Science | University of Kelaniya</p>
             <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarSubmission.click()">Guidelines</button> -->
-            <button type="button" class="btn btn-default btn-lg" onclick="navbarPrecon.click()">Preconference</button>
-            <button type="button" class="btn btn-default btn-lg" onclick="navbarRegister.click()">Register</button>
+            <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarPrecon.click()">Preconference</button> -->
+            <button type="button" class="btn btn-default btn-lg" onclick="navbarPrecon.click()">Resources</button>
+            <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarRegister.click()">Register</button> -->
+            <!-- <button type="button" class="btn btn-default btn-lg" onclick="navbarRegister.click()">Photos</button> -->
             <!-- <a href="res/IRCSCSE Guidelines for abstract submission - Ver 2.1.pdf" target="_blank" class="btn btn-default btn-lg">Guidelines</a> -->
         </div>
     </div>
@@ -100,13 +105,16 @@
     <section id="section-intro" class="section-wrapper about-event">
         <div class="container">
             <div class="row">
-                <div class="col-md-7    ">
-                    <p class="lead ircscseTextJustify">
+                <div class="col-md-12">
+                    <!-- <p class="lead ircscseTextJustify">
                         Welcome to the first International Research Conference in Smart Computing and Systems Engineering (SCSE) organized by the Department of Industrial Management, Faculty of Science, University of Kelaniya, Sri Lanka, which will be held on the 29th of March 2018 in Colombo, Sri Lanka.
+                    </p> -->
+                    <p class="ircscseTextJustify" style="color: black;">
+                        The inaugural International Research Conference on Smart Computing and Systems Engineering (SCSE), organized by the Department of Industrial Management, Faculty of Science, University of Kelaniya in conjunction with the Ministry of Science, Technology and Research, was successfully held on the 29th March, 2018, at the Hotel Clarion, Kiribathgoda. The conference also had industry partnerships from the Zone 24x7, and the Information and Communication Technology Agency (ICTA). The vice chancellor of University of Kelaniya, Prof. D.M. Semasinghe graced the conference as the chief guest, which was attended by a number of international scholars from foreign universities including Tokyo Institute of Technology (Japan), Tsukuba University (Japan), Yamaguchi University (Japan), Deakin University (Australia), Western Sydney University (Australia) and National Chung Hsing University (Taiwan). The conference showcased research from both Sri Lankan and international researchers in the domains of Smart Computing and Systems Engineering. The keynote addresses for the conference were delivered by Prof. Takao Terano of the Tokyo Institute of Technology, and Prof. Pubudu Pathirana, Director of Networked Sensing and Control (NSC) Research group at the Deakin University. The Dean of Faculty of Science, Prof. (Mrs.) B.M. Jayawardena, Dean of Faculty of Humanities, Prof. Patrick Ratnayake, and Heads of Departments of Faculty of Science also attended the conference.
                     </p>
-                    <p class="lead ircscseTextJustify">
+                    <!-- <p class="lead ircscseTextJustify">
                         The primary objective of the SCSE conference is to create a platform for research scholars, academia, researchers and industry experts to present their research in the areas of Smart Computing and Systems Engineering. The conference encourages submissions covering both theoretical and application aspects in these areas and in interdisciplinary areas. The colloquium will provide the delegates with a forum to discuss the most recent innovations and trends, as well as practical challenges encountered in industrial and services sectors, solutions adopted, and network and build collaborations with fellow researchers from across the world.
-                    </p>
+                    </p> -->
                     <p>
                         <center>
                             <h5 style="color:#fd367e;">
@@ -116,15 +124,7 @@
                     </p>
                     <br>
                 </div>
-                <div class="col-md-5">
-                    <!-- <address>
-                        <strong>Department of Industrial Management</strong><br>
-                        Faculty of Science<br>
-                        University of Kelaniya<br>
-                        Dalugama, kelaniya<br>
-                        <abbr title="Phone">Phone:</abbr> +94(0)11 290-3282<br>
-                        <abbr title="Email">Email:</abbr> im@kln.ac.lk
-                    </address> -->
+                <!-- <div class="col-md-5">
                     <p><center>
                         <div class="importantDateColItem">
                             <strong>PRE-CONFERENCE</strong><br>
@@ -157,58 +157,58 @@
                                 Hotel Clarion
                             </h5>
                         </div>
-                        <!-- <strong>Important Dates</strong><br> -->
-                        <!-- <div class="importantDateColItem">
-                            <img src="img/Deadline_Extension_square_new.png" style="width: 150px; vertical-align: text-bottom; float: left; margin-right: -145px; padding-left: 10px;">
-                            <strong>Submission of Abstracts</strong><br>
-                            <h5 style="color:#0e1555;">
-                                    <del>31st January 2018</del><br>
-                                    15th February 2018
-                            </h5>
-                        </div>
-                        <div class="importantDateColItem"><strong>Notification of Acceptance</strong><br>
-                            <h5 style="color:#0e1555;">
-                                <del>25th February 2018</del><br>
-                                7th March 2018
-                            </h5>
-                        </div>
-                        <div class="importantDateColItem"><strong>Final paper Submission</strong><br>
-                            <h5 style="color:#0e1555;">
-                                <del>1st March 2018</del><br>
-                                12th March 2018
-                            </h5>
-                        </div>
-                        <div class="importantDateColItem"><strong>Early-bird Registration</strong><br>
-                            <h5 style="color:#0e1555;">
-                                <del>7th March 2018</del><br>
-                                15th March 2018
-                            </h5>
-                        </div>
-                        <div class="importantDateColItem"><strong>Conference</strong><br>
-                        <h5 style="color:#0e1555;">29th March 2018</h5></div> -->
                         </center>
                     </p>
-                    <!-- <p class="lead ircscseTextJustify" style="color: #fd367e;"> -->
-                    <!-- <p>
-                        <center>
-                            <h5 style="color:#fd367e;">
-                                Selected abstracts will be considered for publishing in the forthcoming Journal of Systems & Software Engineering.
-                            </h5>
-                        </center>
-                    </p> -->
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
     <!-- .about-event -->
 
-    <!-- keynote -->
-    <section id="section-keynote" class="section-wrapper pricing-section gray-bg">
+    <!-- Resources -->
+    <section id="section-resources" class="section-wrapper pricing-section gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <div class="section-title">
-                        <!-- <h1><img src="img/RegisterNow2.png" style="width: 150px; vertical-align: text-bottom; float: left; margin-right: -220px; margin-top: -150px; margin-bottom: -150px; padding-left: 10px; transform: rotate(-35deg);">KEYNOTE</h1> -->
+                        <h1>RESOURCES</h1>
+                         <h5 style="color:#0e1555;">Download SCSE 2018 Proceedings and photos.</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                        <a href="res/SCSE%20Proceedings%202018.pdf" class="btn btn-primary scse-wide-button"target="blank">Click here to download SCSE 2018 PROCEEDINGS</a>
+                </div>
+
+                <!-- <div class="col-sm-6">
+                        <a href="res/SCSE%20-%20Guidelines%20for%20abstract%20submission%20v3.pdf" class="btn btn-primary scse-wide-button">Guidelines (PDF)</a>
+                </div> -->
+            </div>
+            <div>
+                <p class="ircscseTextJustify" style="color: black; text-align: center;">
+                    <br>
+                    Photos of all the conference sessions will be available soon.
+                </p>
+            </div>
+            <!-- <div class="row">
+                <div class="col-sm-6">
+                        <a href="res/SCSE%20-%20Sample%20abstract%20v3.docx" class="btn btn-primary scse-wide-button">Sample Abstract (DOCX)</a>
+                </div>
+
+                <div class="col-sm-6">
+                        <a href="res/SCSE%20-%20Sample%20abstract%20v3.pdf" class="btn btn-primary scse-wide-button">Sample Abstract (PDF)</a>
+                </div>
+            </div>  -->
+        </div>
+    </section>
+
+    <!-- keynote -->
+    <!-- <section id="section-keynote" class="section-wrapper pricing-section gray-bg">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="section-title">
                         <h1>KEYNOTE</h1>
                         <h5 style="color:#0e1555;">SCSE2018</h5>
                     </div>
@@ -270,11 +270,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- keynote END -->
 
     <!-- location -->
-    <section id="section-location" class="section-wrapper pricing-section">
+    <!-- <section id="section-location" class="section-wrapper pricing-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -306,11 +306,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- location END -->
 
     <!-- preconference -->
-    <section id="section-precon" class="section-wrapper about-event gray-bg">
+    <!-- <section id="section-precon" class="section-wrapper about-event gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -386,7 +386,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- pre-conference END -->
 
     <!-- programme committee -->
@@ -856,7 +856,7 @@
                     <div class="section-title">
                         <h1>CONTENT</h1>
                         <h5>
-                            The conference will be operated with two tracks; the Smart Computing track and the Industrial and Systems Engineering track. The conference solicits papers addressing original research from the following areas.
+                            The conference operated with two tracks; the Smart Computing track and the Industrial and Systems Engineering track, and solicited papers addressing original research from the following areas.
                         </h5>
                     </div>
                 </div>
@@ -910,7 +910,7 @@
     <!-- content END -->
 
     <!-- Guidelines -->
-    <section id="section-guidelines" class="section-wrapper pricing-section">
+    <!-- <section id="section-guidelines" class="section-wrapper pricing-section">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -940,11 +940,11 @@
                 </div>
             </div> 
         </div>
-    </section>
+    </section> -->
     <!-- Guidelines END -->
 
     <!-- Registration -->
-    <section id="section-pricing" class="section-wrapper pricing-section gray-bg">
+    <!-- <section id="section-pricing" class="section-wrapper pricing-section gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1017,11 +1017,11 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- registration END -->
 
     <!-- Accommodation -->
-    <section id="section-accommodation" class="section-wrapper section-ajenda">
+    <!-- <section id="section-accommodation" class="section-wrapper section-ajenda">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1061,7 +1061,6 @@
                             <a href="http://www.clarionlk.com/hotel/" target="_blank">www.clarionlk.com</a>
                         </h4>
                     </div>
-                    <!-- .session -->
                 </div>
                 <div class="col-md-6">
                     <div class="session">
@@ -1087,13 +1086,7 @@
                             <a href="http://www.pegasusreefhotel.com" target="_blank">www.pegasusreefhotel.com</a>
                         </h4>
                     </div>
-                    <!-- .session -->
                 </div>
-                <!-- <div class="col-md-4">
-                    <div class="session">
-                        <h3>Fiona Kuhn <span>CO-FOUNDER & CEO, MES</span></h3>
-                    </div>
-                </div> -->
             </div>
             <div class="row">
                 <div class="col-md-12">
@@ -1112,7 +1105,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <!-- partners logos -->
@@ -1267,7 +1260,7 @@
     </section> -->
 
 
-    <section id="organiziners" class="section-wrapper section-ajenda gray-bg">
+    <section id="organiziners" class="section-wrapper section-ajenda">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1337,7 +1330,7 @@
     </section>
 
 
-    <section id="section-venue" class="section-wrapper">
+    <section id="section-venue" class="section-wrapper gray-bg">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -1416,7 +1409,7 @@
         <div class="copyright-section">
             <div class="container">
                 <div class="col-md-12">
-                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.46 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
+                    <div class="copytext text-center"><img src="img/conlogo6.png" style="height: 50px;"> | &copy; SCSE. All rights reserved | v1.48 | <a href="http://dim.kln.ac.lk">Department of Industrial Management</a></div>
                     <!-- <div class="copytext text-center">&copy; IRCSCSE. All rights reserved</div> -->
                 </div>
             </div>
